--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -1,9 +1,16 @@
-$blue:      #0038FF;
-$purple:    #8F00FF;
-$red:       #FF2500;
-$orange:    #FF8700;
-$green:     #00B279;
-$cyan:      #3FAEEC;
-$gray-100:  #F8F9FA;
-$gray-600:  #D0D0D0;
-$gray-900:  #212529;
+$purple: #8f00ff;
+$red: #ff2500;
+$orange: #ff8700;
+$green: #00b279;
+$gray-100: #f8f9fa;
+$gray-600: #d0d0d0;
+$gray-900: #212529;
+
+$lightGray: #9fa6b2;
+$blue: #0038ff;
+$cyan: #3faeec;
+$white: #ffffff;
+$gray: #1b1b1b;
+$black: #000000;
+$darkerGrey: #141414;
+$darkGrey: #181818;
