--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -8,7 +8,9 @@ $gray-900: #212529;
 $green: #00b279;
 $lightGray: #9fa6b2;
 $blue: #0038ff;
+$lightCyan: #8fc9eb;
 $cyan: #3faeec;
+$darkCyan: #1c6996;
 $white: #ffffff;
 $gray: #1b1b1b;
 $black: #000000;
