Made a custom scrollbar for the webpage

--- a/frontend/src/assets/app.scss
+++ b/frontend/src/assets/app.scss
@@ -33,6 +33,31 @@
   }
 }
 
+.radioButton {
+  pointer-events: none;
+}
+
+//scrollbar styles
+
+@media screen and (min-width: 993px) {
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #{$lightCyan};
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #{$blue};
+    border-radius: 5px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #{$darkCyan};
+  }
+}
+
 //dark mode styles
 
 :root {
