Customized the srollbar styles

--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -12,6 +12,7 @@ $lightCyan: #8fc9eb;
 $cyan: #3faeec;
 $darkCyan: #1c6996;
 $white: #ffffff;
+$wh: #ffffff80;
 $gray: #1b1b1b;
 $black: #000000;
 $darkerGrey: #141414;
