--- a/frontend/src/assets/app.scss
+++ b/frontend/src/assets/app.scss
@@ -94,6 +94,12 @@
   --switched-switchButton-bg-color: #{$blue};
   --switchButton-bg-color: #{$cyan};
   --dropdownMenu-border-color: #{$black};
+  --form-bg-color: #{$cyan};
+  --gear-color: #{$dark};
+  --loginButton-bg-color: #{$blue};
+  --loginLink-bg-color: #{$lightGray};
+  --loginLink-color: #{$black};
+  --loginAndRegister-bg-color: linear-gradient(#{$white}, #{$cyan});
 }
 
 [data-theme="dark"] {
@@ -130,6 +136,12 @@
   --switched-switchButton-bg-color: #{$gray};
   --switchButton-bg-color: #{$lightGray};
   --dropdownMenu-border-color: #{$white};
+  --form-bg-color: #{$gray};
+  --gear-color: #{$white};
+  --loginButton-bg-color: #{$darkerGrey};
+  --loginLink-bg-color: #{$darkerGrey};
+  --loginLink-color: #{$white};
+  --loginAndRegister-bg-color: linear-gradient(#{$white}, #{$gray});
 }
 
 body {
@@ -255,4 +267,38 @@ div.user-icon {
 .form-switch .form-check-input {
   --bs-form-switch-bg: var(--formSwitch-color);
   background-image: var(--bs-form-switch-bg);
+}
+
+form.rounded-4 {
+  background-color: var(--form-bg-color);
+  border: var(--border);
+}
+
+i.fa-gear {
+  color: var(--gear-color);
+}
+
+.form-check-input:checked#languageSwitch {
+  border: var(--border);
+}
+
+.formButton {
+  background-color: var(--loginButton-bg-color);
+  border: var(--border);
+  color: white;
+}
+
+.formButton:hover, .formLink:hover {
+  background-color: darken($white, 50%);
+}
+
+.formLink {
+  background-color: var(--loginLink-bg-color);
+  border: var(--border);
+  color: var(--loginLink-color);
+}
+
+.backgroundColor {
+  background: var(--loginAndRegister-bg-color);
+  height: 100%;
 }
