Designing the accordion for dark mode view

--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -2,9 +2,9 @@ $purple: #8f00ff;
 $red: #ff2500;
 $orange: #ff8700;
 $gray-100: #f8f9fa;
-$gray-600: #d0d0d0;
 $gray-900: #212529;
 
+$gray-600: #999999;
 $green: #00b279;
 $lightGray: #9fa6b2;
 $blue: #0038ff;
