--- a/frontend/src/assets/app.scss
+++ b/frontend/src/assets/app.scss
@@ -103,6 +103,8 @@
   --backToTopButton-bg-color: #{$cyan};
   --multiSelect-bg-color: #{$cyan};
   --closeButton-color: #{$black};
+  --accordion-bg: #{$white};
+  --accordion-active-bg: #{$cyan};
 }
 
 [data-theme="dark"] {
@@ -148,6 +150,8 @@
   --backToTopButton-bg-color: #{$lightGray};
   --multiSelect-bg-color: #{$gray};
   --closeButton-color: #{$white};
+  --accordion-bg: #{$lightGray};
+  --accordion-active-bg: #{$gray};
 }
 
 body {
@@ -334,4 +338,16 @@ div[data-pc-section="header"] button[data-pc-section="closebutton"] {
 
 div[data-pc-section="panel"] .form-check-input:checked {
   border: var(--border);
+}
+
+.accordion {
+  --bs-accordion-active-bg: var(--accordion-active-bg);
+  --bs-accordion-bg: var(--accordion-bg);
+  --bs-accordion-color: var(--text-color);
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff' stroke='%23001666' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
+  --bs-accordion-border-color: var(--text-color);
+}
+
+.accordion h2 {
+  color: var(--text-color);
 }
