Making Toast Styles More User-Friendly, Disabling the Delete Button for Multiple Data Deletion When No Data Is Selected

--- a/frontend/src/assets/app.scss
+++ b/frontend/src/assets/app.scss
@@ -84,6 +84,7 @@
   --modal-text-color: #{$black};
   --modal-bg-color: #{$white};
   --toast-success-color: none;
+  --toast-danger-color: none;
   --toast-color: #{$black};
   --scrollbar-color: #{$blue};
   --scrollbar-bg-color: #{$lightCyan};
@@ -130,7 +131,8 @@
   --icon-color: #{$white};
   --modal-text-color: #{$white};
   --modal-bg-color: #{$gray};
-  --toast-success-color: #{$darkerGrey};
+  --toast-success-color: #{$darkGreen};
+  --toast-danger-color: #{$darkRed};
   --toast-color: #{$white};
   --scrollbar-color: #{$lightGray};
   --scrollbar-bg-color: #{$gray};
@@ -248,8 +250,14 @@ div[role="dialog"] input.form-control::placeholder {
   color: var(--input-color);
 }
 
-div[data-pc-name="toast"] div[role="alert"] {
+.toast-success {
   background-color: var(--toast-success-color);
+  color: var(--toast-color);
+  border: var(--border);
+}
+
+.toast-danger {
+  background-color: var(--toast-danger-color);
   color: var(--toast-color);
   border: var(--border);
 }
