--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -6,6 +6,8 @@ $gray-900: #212529;
 
 $gray-600: #999999;
 $green: #00b279;
+$darkGreen: #026e4c;
+$darkRed: #9e1800;
 $lightGray: #9fa6b2;
 $blue: #0038ff;
 $lightCyan: #8fc9eb;
