Updated navbar dropdown color

--- a/frontend/src/assets/app.scss
+++ b/frontend/src/assets/app.scss
@@ -91,7 +91,7 @@
   --scrollbar-bg-color: #{$lightCyan};
   --scrollbar-hover-color: #{$blue};
   --userIcon-color: #{$blue};
-  --dropdownMenu-color: #{$lightCyan};
+  --dropdownMenu-color: #{$cyan};
   --dropdown-link-hover-bg: #{$blue};
   --switched-switchButton-bg-color: #{$blue};
   --switchButton-bg-color: #{$cyan};
